--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Michael Stuper - Week 3</title>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<style>
+    body {
+        padding: 40px;
+    }
+</style>
+
 </head>
 <body>
     
@@ -44,7 +50,7 @@
                 title,
                 author
             };
-            axios.post('http://localhost:3000/posts', req)
+            axios.post('http://localhost:3004/posts', req)
             .then(function (response) {
                 console.log(response);
                 document.getElementById('title').value = '';
@@ -58,9 +64,9 @@
         }
 
         function getPosts() {
-            axios.get('http://localhost:3000/posts')
+            axios.get('http://localhost:3004/posts')
             .then(function (response) {
-                const list = doncument.getElementById('list');
+                const list = document.getElementById('list');
                 if (response && response.data) {
                     list.innerHTML = '';
                     response.data.forEach(post => {
